# reddit-user-to-sqlite

./: .gitignore  .python-version  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  setup.py  tox.ini
reddit_to_sqlite/: cli.py  data.py  helpers.py  reddit_api.py  sqlite_helpers.py
reddit_user_to_sqlite/: cli.py  csv_helpers.py  helpers.py  reddit_api.py  sqlite_helpers.py
tests/: conftest.py  test_cli.py  test_csv_helpers.py  test_helpers.py  test_reddit_api.py  test_sqlite_helpers.py
