[project]
name = "reddit-user-to-sqlite"
version = "0.3.1"

authors = [{ name = "David Brownman", email = "beamneocube@gmail.com" }]
description = "Create a SQLite database containing data pulled from Reddit about a single user."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]
keywords = ["sqlite", "reddit", "dogsheep"]

dependencies = [
  "sqlite-utils==3.32.1",
  "click==8.1.3",
  "requests==2.29.0",
  "tqdm==4.65.0",
  "typing_extensions==4.6.3",
]

[project.optional-dependencies]
test = ["pytest==7.3.1", "responses==0.23.1", "pyright==1.1.309"]
release = ["twine==4.0.2", "build==0.10.0"]

[project.urls]
"Homepage" = "https://github.com/xavdid/reddit-user-to-sqlite"
"Bug Tracker" = "https://github.com/xavdid/reddit-user-to-sqlite/issues"
"Author" = "https://xavd.id"
"Changelog" = "https://github.com/xavdid/reddit-user-to-sqlite/blob/main/CHANGELOG.md"

[project.scripts]
reddit-user-to-sqlite = "reddit_user_to_sqlite.cli:cli"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
